Fix padding around search on mobile

--- a/ckanext/dia_theme/fanstatic/dia_custom.css
+++ b/ckanext/dia_theme/fanstatic/dia_custom.css
@@ -7325,6 +7325,11 @@ textarea {
 .tertiary .search-input {
   margin-bottom: 10px;
 }
+@media (max-width: 768px) {
+  .search-result-heading {
+    margin: 0 20px;
+  }
+}
 @media (min-width: 980px) {
   .search-form .control-order-by {
     float: right;
